--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
 	<link rel="stylesheet" type='text/css' href="style.css">
 	<script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
-	<title>Alves Portifolio</title>
+	<title>Alves Portfolio</title>
 <body>
 	<header class="navbar navbar-dark navbar-expand-md bg-primary">
 		<div class="navbar-brand"></div>
 		<div class= "text-center" style="font-size:1.2em; color:rgb(223, 19, 19)">
-				<i class="fas fa-address-card"></i> Alves Portifolio<br>
+				<i class="fas fa-address-card"></i> Alves Portfolio<br>
 		</div>
 	</header>
 	<br>
@@ -25,7 +25,7 @@
 	<div class="container">
 	<div class="row">
 		<div class="text-center col-xs-12 col-md-12 col-md-offset-0">
-			<h1>Alves Portifolio</h1>
+			<h1>Alves Portfolio</h1>
 		</div>
 		<br>
 		<div class="text-center col lg-12 col-md-12 col-md-offset-0">
