--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 </div>
 	<br>
 <div class="row">
-	<p class="text-center"> This D3 graph has been scaled and illustrates my Data Analytics skillset. 
-			By clicking on each individual bubble it illustrates each scaled skill.</p>
+	<p class="text-center"> These D3 graphs have been scaled and illustrate my Data Analytics skillset. 
+			By clicking on each individual bubble it will show each scaled skill. You can also view a bar chart below.</p>
 	<div class="line col lg-12 col-md-12">
 			<div class="card-body">
 			<h4 class="card-title-2">Scale:</h4>		   	                               
@@ -111,10 +111,18 @@
 			</div>
 	</div>
 </div>
-	<div class="row">
+<div class="row">
+	<div class="col-xs-12 col-md-9 col-md-offset-0">
+		<div class="article">
+			<div id='bubble' class="svg-container col lg-12 col-md-12"></div>
+		</div>
+	</div>
+</div>
+</div>
+<div class="row">
 		<div class="col-xs-12 col-md-9 col-md-offset-0">
 			<div class="article">
-				<div id='body'></div>
+				<div id='body' class="svg-container col lg-12 col-md-12"></div>
 			</div>
 		</div>
 	</div>
