--- a/index.html
+++ b/index.html
@@ -63,17 +63,23 @@
 				<h2>Education:</h2>
 			</div>
 		</div>
-		<div class="text-center">
+	<div class="text-center">
 		<div class="line col lg-4 col-md-4">
 			<div class="card-body">
-			<h4 class="card-title-1">The University of Kansas:</h4>
-			<p class="card-text">Data Analytics Program <br>                                                                                                                                   
-					The University of Kansas – Edwards Campus <br>	November 2017 – June 2018<br>
-					An intensive 29-weeks long program dedicated to learning how to collect, 
-					analyze and utilize data to support the decision-making process. 
-					</p>
+				<h4 class="card-title-2">Park University:</h4>
+				<p class="card-text">Bachelor of Science in Computer Science - Data Management <br>			   	                               
+					Relevant Coursework: Web Development, Data Analysis, Discrete Matematics</p>
 			</div>
 		</div>
+		<div class="line col lg-2 col-md-3">
+			<div class="card-body">
+				<h4 class="card-title-1">The University of Kansas:</h4>
+				<p class="card-text">Data Analytics Program <br>                                                                                                                                   
+					The University of Kansas – Edwards Campus <br>	November 2017 – June 2018<br>
+					An intensive 29-weeks long program dedicated to learning how to collect, 
+					analyze and utilize data to support the decision-making process.</p>
+	</div>
+</div>
 		<div class="line col lg-4 col-md-4">
 					<div class="card-body">
 					<h4 class="card-title-2">Park University:</h4>
@@ -96,33 +102,18 @@
 </div>
 	<br>
 <div class="row">
-	<p class="text-center"> These D3 graphs have been scaled and illustrate my Data Analytics skillset. 
-			By clicking on each individual bubble it will show each scaled skill. You can also view a bar chart below.</p>
+	<p class="text-center"> These D3 bar graph has been scaled and illustrates my experience and skillset:</p>
 	<div class="line col lg-12 col-md-12">
 			<div class="card-body">
 			<h4 class="card-title-2">Scale:</h4>		   	                               
-					Scale: 0 to 499 <br>
-					Fundamental Awareness: 0 to 99 <br>
-					Novice: 100 to 199 <br>
-					Intermediate: 200 to 299 <br>
-					Advanced: 300 to 399 <br>
-					Expert: 400 to 499 <br>
-					<br>
+					From 0 to 10 <br>
 			</div>
 	</div>
 </div>
 <div class="row">
-	<div class="col-xs-12 col-md-9 col-md-offset-0">
-		<div class="article">
-			<div id='bubble' class="svg-container col lg-12 col-md-12"></div>
-		</div>
-	</div>
-</div>
-</div>
-<div class="row">
 		<div class="col-xs-12 col-md-9 col-md-offset-0">
 			<div class="article">
-				<div id='body' class="svg-container col lg-12 col-md-12"></div>
+				<div id='body' class="col align-self-center"></div>
 			</div>
 		</div>
 	</div>
@@ -145,4 +136,4 @@
 
 <script src="https://d3js.org/d3.v4.min.js"></script>
      
-<script src="app.js" type="text/javascript"></script>   
+<script src="app.js" type="text/javascript"></script>
