--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
 
 <head>    
 	<!-- https://www.bootstrapcdn.com/bootswatch/ -->
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="author" content="Gabriel Alves">
+	<meta name="description" content="This website is intended as a professional portifolio.">
+	<meta name="keywords" content="Data, Analysis, Professional">     
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
+	<link href="style.css" rel="stylesheet" type="text/css">
+	<!-- Phone -->
+    <link href="style.css" rel="stylesheet" type="text/css" 
+        media="only screen and (max-width:400px)">
+	<!-- Tablet -->
+    <link href="style.css" rel="stylesheet" type="text/css" 
+        media="only screen and (min-width:401px) and (max-width:800px)">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.7.3/d3.min.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
 		crossorigin="anonymous">
@@ -67,8 +76,11 @@
 		<div class="line col lg-4 col-md-4">
 			<div class="card-body">
 				<h4 class="card-title-2">Park University:</h4>
-				<p class="card-text">Bachelor of Science in Computer Science - Data Management <br>			   	                               
-					Relevant Coursework: Web Development, Data Analysis, Discrete Matematics</p>
+				<p class="card-text">Bachelor of Science, Information CompScience - Data Management <br>
+					Expected Graduation: Summer 2021 <br>			   	                               
+					Relevant Coursework: Computer Systems Analysis and Design, Data Management, User Inteface Design,
+					Computer Networking, Web Development
+				</p>
 			</div>
 		</div>
 		<div class="line col lg-2 col-md-3">
@@ -83,10 +95,10 @@
 		<div class="line col lg-4 col-md-4">
 					<div class="card-body">
 					<h4 class="card-title-2">Park University:</h4>
-					<p class="card-text">Bachelor of Arts in Business Administration Management <br>			   	                               
+					<p class="card-text">Bachelor of Arts, Business Administration - Management <br>			   	                               
 							Graduated: May 2016 <br>
 							Cumulative GPA: 3.88 <br>
-							Relevant Coursework: Business Law, Management and Organization Behavior, Small Business Management 
+							Relevant Coursework: Business Law, Management and Organization Behavior, Labor Relations, Complex Organizations
 							</p>
 					</div>
 				</div>
@@ -111,16 +123,14 @@
 	</div>
 </div>
 <div class="row">
-		<div class="col-xs-12 col-md-9 col-md-offset-0">
-			<div class="article">
-				<div id='body' class="col align-self-center"></div>
-			</div>
+		<div class="article">
+			<div id='body'></div>
 		</div>
 	</div>
 	</div>
 <div class="text-white">
 <div id="footer">
-	<p>Alves (C) 2018. All Rights Reserved.</p>
+	<p></p>
 </div>
 </div>
 
@@ -136,4 +146,4 @@
 
 <script src="https://d3js.org/d3.v4.min.js"></script>
      
-<script src="app.js" type="text/javascript"></script>
+<script src="app.js" type="text/javascript"></script>   
