--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				<div class="profile" style="width: 18rem;">
 					<img class="pic card-img-top" src="my_image.jpg" style="width: 100%" alt="Profile">
 					<h3 class="card-title text-center">Gabriel Alves</h3>
-					<p class="card-text text-center">Data / Business Analyst</p>
+					<p class="card-text text-center">Application Administrator</p>
 					<p class="card-text text-center">alvesgp19@gmail.com</p>
 					<div class="text-center">
 					<a href="https://www.linkedin.com/in/gabrielalves19/"><i class="text-center link fab fa-linkedin"></i></a>
@@ -77,7 +77,8 @@
 			<div class="card-body">
 				<h4 class="card-title-2">Park University:</h4>
 				<p class="card-text">Bachelor of Science, Information CompScience - Data Management <br>
-					Expected Graduation: Summer 2021 <br>			   	                               
+					Graduated: Summer 2021 <br>
+					Cumulative GPA: 3.65 <br>
 					Relevant Coursework: Computer Systems Analysis and Design, Data Management, User Inteface Design,
 					Computer Networking, Web Development
 				</p>
