--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 </div>
 	<br>
 <div class="row">
-	<p class="text-center"> These D3 bar graph has been scaled and illustrates my experience and skillset:</p>
+	<p class="text-center"> These D3 bar graph has been scaled and illustrates my years of experience and skillset:</p>
 	<div class="line col lg-12 col-md-12">
 			<div class="card-body">
 			<h4 class="card-title-2">Scale:</h4>		   	                               
